--- a/home_page.html
+++ b/home_page.html
@@ -112,12 +112,12 @@
         <nav>
             <div class="left">
                 Sex-Education
-                <a class="Medi" href="website.html">MediMate</a>
+                <a class="Medi" href="index.html">MediMate</a>
             </div>
             <div class="centre">
                 <div class="right">
                     <ul>
-                        <li><a href="website.html">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="project_info2.html">About Us</a></li>
                         <li><a href="contact23.html">Contact Us</a></li>
                     </ul>
