--- a/contact23.html
+++ b/contact23.html
@@ -127,7 +127,7 @@
                 SexEd Bot </div>
             <div class="right">
                 <ul>
-                    <li><a href="home_page.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="project_info2.html">About Us</a></li>
                     <li><a href="contact23.html">Contact Us</a></li>
                 </ul>
