--- a/forced_s.html
+++ b/forced_s.html
@@ -94,8 +94,8 @@
                 <div class="right">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="project_info2.html">About Us</a></li>
+                        <li><a href="contact23.html">Contact Us</a></li>
                     </ul>
                 </div>
         </nav>
