--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="website.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="project_info.html">About Us</a></li>
                     <li><a href="contact2.html">Contact Us</a></li>
                 </ul>
