--- a/project_info2.html
+++ b/project_info2.html
@@ -250,7 +250,7 @@
                 <div class="centre">
                     <div class="right">
                         <ul>
-                            <li><a href="home_page.html">Home</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="project_info.html">About Us</a></li>
                             <li><a href="contact2.html">Contact Us</a></li>
                         </ul>
