--- a/forced_s.html
+++ b/forced_s.html
@@ -93,7 +93,7 @@
             <div class="centre">
                 <div class="right">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="website.html">MediMate</a></li>
                         <li><a href="project_info2.html">About Us</a></li>
                         <li><a href="contact23.html">Contact Us</a></li>
                     </ul>
