--- a/home_page.html
+++ b/home_page.html
@@ -112,12 +112,12 @@
         <nav>
             <div class="left">
                 Sex-Education
-                <a class="Medi" href="index.html">MediMate</a>
+                
             </div>
             <div class="centre">
                 <div class="right">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">MediMate</a></li>
                         <li><a href="project_info2.html">About Us</a></li>
                         <li><a href="contact23.html">Contact Us</a></li>
                     </ul>
@@ -140,6 +140,8 @@
                 <li><a href="toxic_r.html">Toxic Relationships</a></li>
             </ul>
         </h2>
+        <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/874de8f9-f788-4b5f-a2d6-414df028a20d/webchat/config.js" defer></script>
 </body>
 
 </html>
