--- a/project_info2.html
+++ b/project_info2.html
@@ -250,9 +250,9 @@
                 <div class="centre">
                     <div class="right">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="project_info.html">About Us</a></li>
-                            <li><a href="contact2.html">Contact Us</a></li>
+                            <li><a href="home_page.html">Sex-Ed</a></li>
+                            <li><a href="project_info2.html">About Us</a></li>
+                            <li><a href="contact23.html">Contact Us</a></li>
                         </ul>
                     </div>
         </header>
