--- a/contact2.html
+++ b/contact2.html
@@ -127,7 +127,7 @@
                 MediMate </div>
             <div class="right">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Medimate</a></li>
                     <li><a href="project_info.html">About Us</a></li>
                     <li><a href="contact2.html">Contact Us</a></li>
                 </ul>
