--- a/index.html
+++ b/index.html
@@ -162,11 +162,9 @@
         <nav>
             <div class="left">
                 MediMate</div>
-            <a class="Sex" href="home_page.html">SexEd Bot</a>
-            </div>
             <div class="right">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="home_page.html">Sex-Ed</a></li>
                     <li><a href="project_info.html">About Us</a></li>
                     <li><a href="contact2.html">Contact Us</a></li>
                 </ul>
